--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pm2-logstash",
+  "name": "@easynvest/pm2-logstash",
   "version": "0.0.1",
   "description": "PM2 Logstash Module",
   "main": "app.js",
